v0.76.1.13:
	- Fixed a startup error on fresh installs.
v0.76.1.14:
	- Towns which have unclaimed their HomeBlock (or all TownBlocks) no longer corrupt the data files on a shutdown.
	- Towns are now able to move worlds by moving their homeblock to that world.
	- Fixed Account creation for towns and nations when using BOSEconomy.
	- Towny now uses the correct currency type (coins/dollars) as defined in your Eco plugin.
v0.76.1.15:
	- Added '/town set tag clear' and '/nation set tag clear' to reset tags.
	- Titles and surnames are now reset if the player is not in a nation.
v0.76.1.16:
	- Added '/plot clear' for mayors.
	  If a plot is owned by the town (not a resident) the mayor can stand in the plot and type this command to remove all block types as specified in mayor_plotblock_delete.
	  This setting is per world so transfers to the world data files at startup.
v0.76.1.17:
	- Added upkeep charging based upon the number of town plots (town_plotbased_upkeep) - thanks to phex
	- Slight reorgnise of TownyUniverse (if you hook towny be sure your functions have not moved).
	- Changed the daily timer to a set time each day. Configure new_day_time to set when you want taxes to be collected.
	  eg. 15h30m would attempt to collect taxes at 3:30pm.
v0.76.1.18:
	- Returned the setting day_interval so you can configure the length of a day.
	  If you set a day length of 12 hours (12h), taxes will be collected on a 12 hourly cycle, instead of a 24 hour one.
	  new_day_time should be set to less than the day_interval, but it will default to the same, if it's incorrectly set.
v0.76.1.19:
	 - Fixed an error in fetching the resident on new cache creation (caused by code reorganising).
v0.76.2.0:
	- Release
v0.76.2.1:
	- Fixed an error when not using a currency type with Essentials Eco.
v0.76.2.2:
	- Force load the destination chunk when teleporting. Attempt to prevent the falling through the world bug.